# site-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO.md
.cursor/rules/: project-rules.mdc
src/: bake.rs  collections.rs  errors.rs  lib.rs  main.rs  reprocessors.rs  search.rs  serde.rs  site.rs  tag_detection.rs  thread_safe_work_dir.rs  timestring.rs  workdir.rs  workdir_dao.rs
src/data/: README.md  english_corpus.txt  stop_words.txt
src/handlers/: blog.rs  booru.rs  common.rs  generic.rs  mod.rs  reddit.rs  search.rs  url_state.rs
src/res/: detail_page.js  page-transitions.css  styles.css
