[package]
name = "life-logger-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
actix-web = "4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
pwhash = "1"
indexmap = { version = "2.2.5", features = ["serde"] }
error-chain = "0.12.4"
maud = { version = "*", features = ["actix-web"] }

# metrics
actix-web-opentelemetry = { version = "0.16.0", features = ["metrics", "metrics-prometheus"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio-current-thread"] }
opentelemetry-prometheus = { version = "0.14" }
prometheus = { version = "0.13" }
