[package]
name = "site-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
chrono = "0.4.38"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = [
  "std",
] }
actix-web = "4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
pwhash = "1"
indexmap = { version = "2.2.5", features = ["serde"] }
thiserror = "1.0"
maud = { version = "*", features = ["actix-web"] }
md5 = "0.7"
urlencoding = { version = "2.1.3" }
itertools = "0.12.1"
# metrics
actix-web-opentelemetry = { version = "0.16.0", features = [
  "metrics",
  "metrics-prometheus",
] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = [
  "metrics",
  "rt-tokio-current-thread",
] }
opentelemetry-prometheus = { version = "0.14" }
prometheus = { version = "0.13" }
actix-files = "0.6.6"
rand = { version = "0.8.5", features = ["alloc"] }
actix-web-httpauth = "0.8.0"
